--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,20 @@
 language: node_js
 
+env:
+  - DATABASE_URL=postgresql://postgres@localhost:5432/waiter_shifts
+
 node_js:
   - "v9.11.2"
+
+before_script:
+  - sudo cp /etc/postgresql/9.4/main/pg_hba.conf /etc/postgresql/9.5/main/pg_hba.conf
+  - sudo /etc/init.d/postgresql restart
+
+addons:
+  apt:
+    sources:
+    - precise-pgdg-9.5
+    packages:
+    - postgresql-9.5
+    - postgresql-contrib-9.5
+  postgresql: 9.5
