--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,8 +2,8 @@
    "type": "postgres",
    "host": "localhost",
    "port": 5432,
-   "username": "",
-   "password": "",
+   "username": "coder",
+   "password": "pg123",
    "database": "waiter_shifts",
    "synchronize": true,
    "logging": false,
