--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
    "dependencies": {
       "@types/pg": "^7.11.2",
       "body-parser": "^1.19.0",
+      "chai": "^4.2.0",
       "express": "^4.17.1",
+      "express-handlebars": "^3.1.0",
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
+      "supertest": "^4.0.2",
       "typeorm": "0.2.19"
    },
    "scripts": {
