--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
    "description": "Waiter manager app with TypeScript & TypeORM.",
    "devDependencies": {
       "@types/mocha": "^5.2.7",
+      "@types/node": "^12.7.9",
       "mocha": "^6.2.1",
       "ts-mocha": "^6.0.0",
-      "ts-node": "3.3.0",
-      "@types/node": "^12.7.9",
+      "ts-node": "^3.3.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
