--- a/ormconfig.json
+++ b/ormconfig.json
@@ -8,7 +8,7 @@
    "synchronize": true,
    "logging": false,
    "entities": [
-      "src/entity/**/*.ts"
+      "build/src/entity/**/*.js"
    ],
    "migrations": [
       "src/migration/**/*.ts"
