--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
    },
    "scripts": {
       "test": "ts-mocha test/*.ts",
-      "start": "ts-node src/index.ts"
+      "build": "tsc",
+      "start-ts": "ts-node src/index.ts",
+      "start": "node build/src/index.js"
    }
 }
